# archipelago

./: .gitignore  Makefile  README.md  handoff.md
agents/: .dockerignore  .env.example  CONTRIBUTING-AGENTS.md  README.md  pyproject.toml
agents/runner/: main.py  manifest.py  models.py  replay.py
agents/runner/agents/: models.py  registry.py
agents/runner/agents/claude_code_agent/: main.py
agents/runner/agents/echo_agent/: main.py
agents/runner/agents/loop_agent/: main.py
agents/runner/agents/react_toolbelt_agent/: main.py  resum.py  tools.py
agents/runner/harbor/: __init__.py  agent.py  artifacts.py  runtime.py  studio_environment.py  task_package.py  worker.py
agents/runner/save/: _normalize.py  main.py  webhook.py
agents/runner/utils/: anthropic_direct.py  decorators.py  error.py  image_fetch.py  llm.py  mcp.py  metrics.py  settings.py  signing.py  studio_http.py  subagent.py  truncation.py  usage.py
agents/runner/utils/logging/: api_logger.py  main.py  postgres_logger.py  s3_log_parts.py
agents/tests/: test_final_answer_log.py  test_loop_agent.py  test_manifest.py  test_openai_compat.py  test_react_toolbelt_config.py
mcp_servers/bamboohr/: README.md  arco.toml  mise.toml  pyproject.toml  pyrightconfig.json
mcp_servers/bamboohr/captures/bamboohr/: capture_summary.json
mcp_servers/bamboohr/mcp_servers/bamboohr/: alembic.ini  constants.py  main.py  mcp-build-spec.yaml  (+1 more)
mcp_servers/bamboohr/scripts/: capture_bamboohr.py  import_csv.py  mcp_rest_bridge.py  regenerate_ui.py  run_mcp_server.py  setup_mcp_server.py  validate_tool_names.py
mcp_servers/bamboohr/smoke_test/: pyproject.toml  test_agent.py
mcp_servers/bloomberg/: .env.example  .mcp-inspector.json  .pre-commit-config.yaml  Makefile  README.md  arco.toml  mcp-build-spec.yaml  mise.toml  pyproject.toml  pyrightconfig.json  requirements.txt
mcp_servers/bloomberg/scripts/: claude-log-watch.sh  generate_guide_json.py  mcp_rest_bridge.py  start.sh  test_mcp.sh  verify_mcp.py
mcp_servers/bloomberg/smoke_test/: conftest.py  pyproject.toml
mcp_servers/edgar_sec/: .coverage  .cursorrules  .env.example  Makefile  README.md  arco.toml  mise.toml  pyproject.toml
mcp_servers/edgar_sec/scripts/: apply_ci_templates.py  claude-log-watch.sh  create_mcp_server.py  detect_ui_drift.py  download_edgar_data.py  download_sp500_data.py  extract_tools.py  generate_guide_json.py  generate_openapi.py  import_csv.py  logging_config.py  test-schema-validate.sh  test_equity_manual.py  tickers.txt  validate_mcp_tools.py  validate_seed.py  validate_tool_names.py
mcp_servers/edgar_sec/smoke_test/: conftest.py  pyproject.toml  test_agent.py
mcp_servers/fmp/: .env.example  .pre-commit-config.yaml  Makefile  README.md  arco.toml  mise.toml  pyproject.toml  run_server.sh
mcp_servers/fmp/data/: .gitkeep
mcp_servers/fmp/scripts/: __init__.py  apply_ci_templates.py  audit_meta_tools.py  build_sv_fixtures.py  db_report.py  download_fixtures.py  download_missing.py  download_parallel.py  endpoints.py  extract_tools.py  import_csv.py  manage_db.py  mcp_rest_bridge.py  regenerate_ui.py  test-schema-validate.sh  validate_sqlite_seed.py
mcp_servers/fmp/smoke_test/: pyproject.toml  test_agent.py
mcp_servers/fmp/verifier_configs/: helpers.py  registry.py  validation.py
mcp_servers/looker/: .pre-commit-config.yaml  README.md  arco.toml  mise.toml  package-lock.json  pyproject.toml
mcp_servers/looker/scripts/: benchmark.py  demo_run_query_png.py  dev-ui.sh  mcp_rest_bridge.py  regenerate_ui.py  run_local_ui.py
mcp_servers/looker/smoke_test/: pyproject.toml  test_agent.py
mcp_servers/tableau/: .pre-commit-config.yaml  README.md  arco.toml  mise.toml  pyproject.toml
mcp_servers/tableau/migrate-nextjs-to-mcp-view/: migrate.sh  skill.json
mcp_servers/tableau/scripts/: audit_meta_tools.py  create_mcp_server.py  dev-ui.sh  extract_tools.py  generate_openapi.py  import_csv.py  logging_config.py  regenerate_ui.py  ui_tool_tester_fly.py
mcp_servers/tableau/smoke_test/: conftest.py  pyproject.toml
mcp_servers/tableau/tableau_data/: view_1a7e3ecd-d24c-41f8-ad02-fff1f0b299b0_data.csv
mcp_servers/terrapin/: .gitattributes  README.md  arco.toml  mise.toml  pyproject.toml
mcp_servers/terrapin/scripts/: create_mcp_server.py  db_tools.py  detect_ui_drift.py  extract_tools.py  generate_openapi.py  mcp_rest_bridge.py
mcp_servers/terrapin/smoke_test/: pyproject.toml
mcp_servers/uspto/: README.md  arco.toml  mise.toml  pyproject.toml
mcp_servers/uspto/scripts/: _mcp_wrapper.py  apply_ci_templates.py  claude-log-watch.sh  create_mcp_server.py  detect_ui_drift.py  fetch_status_codes.py  generate_openapi.py  mcp_rest_bridge.py  regenerate_ui.py  run_local_ui.py  validate_mcp_tools.py  validate_tool_names.py  validate_tool_quality.py
mcp_servers/uspto/smoke_test/: pyproject.toml  test_agent.py
mcp_servers/workday/: .pre-commit-config.yaml  README.md  arco.toml  mise.toml  pyproject.toml  pyrightconfig.json  test_export_csv_filtering.py
mcp_servers/workday/integration_tests/: __init__.py  conftest.py  helpers.py  pytest.ini  test_full_workflow.py  test_headcount_reconciliation.py  test_temporal_queries.py
mcp_servers/workday/reports/: .gitkeep
mcp_servers/workday/scripts/: __init__.py  apply_ci_templates.py  create_mcp_server.py  db_tools.py  detect_ui_drift.py  extract_tools.py  generate_openapi.py  import_csv.py  run_local_ui.py  ui_tool_tester.py  ui_tool_tester_fly.py  validate_mcp_tools.py  validate_tool_names.py
mcp_servers/workday/smoke_test/: conftest.py  pyproject.toml  test_agent.py
mcp_servers/xero/: .pre-commit-config.yaml  Makefile  README.md  arco.toml  mise.toml  pyproject.toml  pyrightconfig.json  requirements.txt  run_server.sh  test_download.html  test_oauth_flow.py
mcp_servers/xero/scripts/: claude-log-watch.sh  create_mcp_server.py  db_tools.py  extract_tools.py  generate_synthetic_data.py  import_csv_directory.py  mcp_rest_bridge.py  regenerate_ui.py  validate_synthetic_data.py
mcp_servers/xero/smoke_test/: pyproject.toml  test_agent.py
mcp_servers/xero/ui_generator/: __init__.py
(+2562 files in other folders)
