[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[project]
name = "archipelago-agents"
version = "0.1.0"
description = "Agent implementations for Archipelago"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aioboto3>=15.4.0",
    "cryptography>=46.0.7,<47",
    "aiobotocore>=2.25.0",
    "anthropic>=0.84.0",
    "datadog-api-client>=2.44.0",
    "deepagents>=0.1.0",
    "langchain>=1.2.0",
    "langchain-litellm>=0.1.0",
    "fastmcp>=3.2.0",
    "firecrawl-py>=4.12.0",
    "google-auth>=2.0.0",
    "harbor==0.14.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "litellm==1.84.0",
    "loguru>=0.7.3",
    "modal>=1.5.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "openhands-sdk==1.19.0",
    "pillow==12.2.0",
    "trafilatura>=1.12.0",
    "pymupdf>=1.27.2",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-testmon>=2.1.0",
    "pytest-xdist>=3.0.0",
    "testcontainers>=4.6.1",
    "types-aioboto3>=15.2.0",
    "types-aiobotocore-sqs>=2.24.3",
]

[tool.uv]
exclude-newer = "7 days"
override-dependencies = [
    # litellm 1.83.4+ pins python-dotenv==1.0.1 while fastmcp>=3.2.0 requires >=1.1.0;
    # override to break the conflict (runtime works fine with python-dotenv 1.1.x).
    "python-dotenv>=1.0.1",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportUnusedCallResult = "none"
failOnWarnings = false
exclude = [".venv", ".git", ".tmp", "venv"]

[tool.ruff.lint]
# Enable linting rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
]

ignore = [
    "E501",  # Line too long
]

[tool.ruff.lint.mccabe]
max-complexity = 28
