[project]
name = "mercor-mcp"
version = "0.1.0"
description = "A Python-based framework for rapidly developing Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp-schema",
    "fastmcp==2.14.3",
    "loguru",
    "asyncer",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.24.0",
]

[project.scripts]
mcp-ui-gen = "ui_generator.cli.main:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "pyyaml>=6.0",          # For OpenAPI YAML generation
    "basedpyright>=1.18.0", # Type checking
    "pytest-watch>=4.2.0",  # Watch mode for tests
    "pytest-cov>=4.0.0",    # Coverage for make test-cov / pytest --cov
]
database = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0",            # Required by SQLAlchemy async
    "pandas>=2.0.0",            # For robust CSV import/export
]
config = ["pydantic-settings>=2.0", "python-dotenv>=1.0.0"]
auth = [
    "starlette>=0.27.0", # Required for auth_server HTTP endpoints
    "httpx>=0.24.0",     # For testing auth endpoints
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ui_generator*", "mcp_servers*", "packages*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "verifier_configs",
] # Synced from rl-studio, uses different linting standards

[tool.ruff.lint]
# Enable: pyflakes, pycodestyle, isort, pep8-naming, pyupgrade
select = ["F", "E", "W", "I", "N", "UP"]
ignore = []
# Allow auto-fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# FMP API response models use camelCase field names to match API response format
"mcp_servers/fmp_server/models/fmp.py" = ["N815"]
# Allow longer lines in test files for mock implementations
"tests/**/*.py" = ["E501"]
# Allow longer lines in meta-tools for detailed LLM-friendly documentation
"mcp_servers/fmp_server/tools/_meta_tools.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
exclude = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["utils", ".git", ".ruff_cache", "__pycache__", "mcp_servers"]
asyncio_mode = "auto"

[tool.uv.sources]
mcp-schema = { path = "packages/mcp_schema" }
fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev = "bc2f601" }

[dependency-groups]
dev = ["litellm>=1.80.16"]
