[project]
name = "mercor-mcp"
version = "0.1.0"
description = "A Python-based framework for rapidly developing Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mercor-mcp-shared[database,rest]",
    "fastmcp",
    "loguru",
    "asyncer",
    "pydantic>=2.0",
    "email-validator>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pandas>=2.0.0", # For data extraction from twbx workbooks
    "xlrd>=2.0.0", # For reading .xls files in twbx workbooks
    "openpyxl>=3.0.0", # For reading .xlsx files in twbx workbooks
    # tableauhyperapi only available on specific platforms (not Linux ARM64)
    "tableauhyperapi>=0.0.20; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'",
    "playwright>=1.57.0",
    "matplotlib>=3.7.0",  # For server-side chart rendering in visualization tools
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "pyyaml>=6.0",  # For OpenAPI YAML generation
]
database = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0",  # Required by SQLAlchemy async
]
config = [
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]
auth = [
    "starlette>=0.27.0",  # Required for auth_server HTTP endpoints
    "httpx>=0.24.0",  # For testing auth endpoints
]
rest-bridge = [
  "fastapi>=0.121.2",
  "uvicorn>=0.38.0",
  "pandas>=2.0.0",
  "sqlalchemy[asyncio]>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # This is a template repo, no modules to install
packages = []  # ui_generator now provided by mercor-mcp-shared

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable: pyflakes, pycodestyle, isort, pep8-naming, pyupgrade
select = ["F", "E", "W", "I", "N", "UP"]
ignore = ["E501", "N802"]
# Allow long lines in meta-tools files for detailed field descriptions
per-file-ignores = { "mcp_servers/**/tools/_meta_tools.py" = ["E501"] }  # E501: verbose API docs, N802: do_GET is required by http.server
# Allow auto-fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.basedpyright]
exclude = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["utils", ".git", ".ruff_cache", "__pycache__", "mcp_servers"]
asyncio_mode = "auto"

[tool.uv.sources]
mercor-mcp-shared = { path = "packages/mercor-mcp-shared" }
fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev = "bc2f601" }
