[project]
name = "terrapin"
version = "0.1.0"
description = "An mcp server to interact with Terrapin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp-schema",
    "fastmcp",
    "loguru",
    "asyncer",
    "pydantic>=2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "click>=8.2.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "duckdb>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
mcp-ui-gen = "ui_generator.cli.main:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "pyyaml>=6.0",  # For OpenAPI YAML generation
]
database = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0",  # Required by SQLAlchemy async
    "pandas>=2.0.0",  # For robust CSV import/export
]
config = [
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]
auth = [
    "starlette>=0.27.0",  # Required for auth_server HTTP endpoints
    "httpx>=0.24.0",  # For testing auth endpoints
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ui_generator", "ui_generator.parser", "ui_generator.scanner", "ui_generator.converter", "ui_generator.codegen", "ui_generator.cli"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["verifier_configs"]  # Synced from rl-studio, uses different linting standards

[tool.ruff.lint]
# Enable: pyflakes, pycodestyle, isort, pep8-naming, pyupgrade
select = ["F", "E", "W", "I", "N", "UP"]
ignore = []
# Allow long lines in schema and meta-tools files for detailed field descriptions
per-file-ignores = { "mcp_servers/**/tools/_meta_tools.py" = ["E501"], "mcp_servers/**/models.py" = ["E501"] }
# Allow auto-fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
exclude = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["utils", ".git", ".ruff_cache", "__pycache__", "mcp_servers"]
asyncio_mode = "auto"

[tool.uv.sources]
fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev = "bc2f601" }
mcp-schema = { path = "packages/mcp_schema" }

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
