[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mercor-xero"
version = "0.1.0"
description = "MCP server for Xero Accounting with online and offline providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp-schema",
  "fastmcp",
  "httpx>=0.27.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.0.0",
  "authlib",
  "python-dotenv",
  "loguru",
  "asyncer",
  "black",
  "isort",
  "ruff",
  "basedpyright",
  "pre-commit",
  "jsonschema",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "greenlet>=3.0.0",
  "alembic>=1.13.0",
  "mcp-cache",
  "mcp-middleware",
]

[tool.uv.sources]
mcp-schema = { path = "packages/mcp_schema" }
fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev = "bc2f601" }
mcp-cache = { path = "packages/mcp_cache" }
mcp-middleware = { path = "packages/mcp_middleware" }

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "black",
  "mypy",
  "pytest-asyncio>=1.0.0",
  "pytest-dotenv>=0.5.0",
]
ui-generator = [
  "jinja2>=3.0.0",
  "pyyaml>=6.0",
  "fastapi>=0.121.2",
  "uvicorn>=0.38.0",
  "pandas",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools]
packages = [
  "ui_generator",
  "ui_generator.parser",
  "ui_generator.scanner",
  "ui_generator.converter",
  "ui_generator.codegen",
  "ui_generator.cli",
]

[project.scripts]
mcp-ui-gen = "ui_generator.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_servers", "ui_generator"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "online: marks tests that require live Xero API connection (deselect with '-m \"not online\"')",
]
env_files = ["mcp_servers/xero/.env"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [
  "mcp_servers/xero/auth/oauth_manager.py",
  "mcp_servers/xero/auth/oauth_pkce.py",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "E402", # module level import not at top of file
]
# Allow long lines in meta-tools files for detailed field descriptions
per-file-ignores = { "mcp_servers/**/tools/_meta_tools.py" = ["E501"], "mcp_servers/xero/main.py" = ["E501"], "ui_generator/cli/main.py" = ["E501"], "ui_generator/converter/schema_converter.py" = ["E501"], "tests/**/*.py" = ["E501"] }

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.basedpyright]
pythonVersion = "3.12"
include = ["src"]
extraPaths = ["src"]
exclude = ["scripts"]
typeCheckingMode = "standard"
